tests/testcases/errors/BCE0097-1.boo
"""
BCE0097-1.boo(4,1): BCE0097: Cannot branch into try block.
"""
goto start
try:	
	:start
ensure:
	pass
